Fixed Background Images On Mobile

--- a/nathan-wick/src/App.css
+++ b/nathan-wick/src/App.css
@@ -43,6 +43,12 @@
   position: relative;
 }
 
+@media (hover: none) {
+  .parallax {
+      background-attachment: initial;
+  }
+}
+
 .text-bright {
   color: var(--text-bright);
 }
